--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
   <title>Denim Typos</title>
   <meta name="description" content="Shirts from Jeans.">
-  <link rel="icon" type="image/png" href="/images/fav.png">
-  <!-- <link rel="stylesheet" href="/css/layout.css"> -->
-  <link rel="stylesheet" href="/css/fancybox.css">
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="icon" type="image/png" href="./images/fav.png">
+  <!-- <link rel="stylesheet" href="./css/layout.css"> -->
+  <link rel="stylesheet" href="./css/fancybox.css">
+  <link rel="stylesheet" href="./css/main.css">
 
   <script src="https://use.typekit.net/luu1qlc.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
@@ -26,7 +26,7 @@
   <body class="i-tran1 i-tran2 i-tran3">
   	<!-- <div class="loading">Loading...</div> -->
 <section class="full" id="intro">
-	<img style="display: none;" src="/images/big/home.jpg" srcset="/images/big/hen_m.jpg 801w, /images/big/hen.jpg 1381w">
+	<img style="display: none;" src="./images/big/home.jpg" srcset="./images/big/hen_m.jpg 801w, ./images/big/hen.jpg 1381w">
 	<div id="innerintro">
 		<h1 class="ihide">Shirst</h1>
 		<h2 class="ihide" id="h2a">Shirts from jeans.</h2>
@@ -58,7 +58,7 @@
 	<div class="long" id="im1">
 		<div>
 			<a href="http://store.shirst.com/">
-				<img id="halfzip" src="/images/big/hen.jpg" srcset="/images/big/hen_m.jpg 800w, /images/big/hen.jpg 1400w"/>
+				<img id="halfzip" src="./images/big/hen.jpg" srcset="./images/big/hen_m.jpg 800w, ./images/big/hen.jpg 1400w"/>
 			</a>
 			<div class="shadow-helper"></div>
 		</div>
@@ -67,7 +67,7 @@
 	<div class="long" id="im2">
 		<div>
 			<a href="http://store.shirst.com/">
-				<img id="outershell" src="/images/big/button.jpg" srcset="/images/big/button_m.jpg 800w, /images/big/button.jpg 1400w"/>
+				<img id="outershell" src="./images/big/button.jpg" srcset="./images/big/button_m.jpg 800w, ./images/big/button.jpg 1400w"/>
 			</a>
 			<div class="shadow-helper"></div>
 		</div>
@@ -76,7 +76,7 @@
 	<div class="long" id="im3">
 		<div>
 			<a href="http://store.shirst.com/">
-				<img id="sweater" src="/images/big/classic.jpg" srcset="/images/big/classic_m.jpg 800w, /images/big/classic.jpg 1400w"/>
+				<img id="sweater" src="./images/big/classic.jpg" srcset="./images/big/classic_m.jpg 800w, ./images/big/classic.jpg 1400w"/>
 			</a>
 			<div class="shadow-helper"></div>
 		</div>
@@ -85,7 +85,7 @@
 	<div class="long" id="im4">
 		<div>
 			<a href="http://store.shirst.com/">
-				<img id="tee" src="/images/big/short.jpg" srcset="/images/big/short_m.jpg 800w, /images/big/short.jpg 1400w"/>
+				<img id="tee" src="./images/big/short.jpg" srcset="./images/big/short_m.jpg 800w, ./images/big/short.jpg 1400w"/>
 			</a>
 			<div class="shadow-helper"></div>
 		</div>
@@ -121,7 +121,7 @@
 		<h3>So the shirts are made in small batches?</h3>
 		<p>Yes, you are even allowed to tell your friends your shirt is Limited Edition.</p>
 		<h3>Made in the USA?</h3>
-		<p>Yep, all production takes place in <a id="nycmap" href="http://shirst.com/images/nycmap.jpg">NYC</a>. Our denim is also made in the USA.</p>
+		<p>Yep, all production takes place in <a id="nycmap" href="./images/nycmap.jpg">NYC</a>. Our denim is also made in the USA.</p>
 		<h3>Why Shirst</h3>
 		<p>These shirts are fashion typos.</p>
 		<!-- <h3>How many styles are there?</h3>
@@ -129,7 +129,7 @@
 		<h3>Who are we?</h3>
 		<p><a href="http://www.unfoundedlabs.com" target="_blank">Eric</a> and <a href="https://www.google.com/search?&q=zach" target="_blank">Zach</a>, not your average fashionistas.</p>
 		<h3>Do people actually buy these things?</h3>
-		<p>Believe it or not, yes. Here are some <a href="/testimonials" target="_blank">testimonials</a>.</p>
+		<p>Believe it or not, yes. Here are some <a href="./testimonials" target="_blank">testimonials</a>.</p>
 
 	</div>
 	<div class="right">
@@ -138,7 +138,7 @@
             <a href="http://www.twitter.com/shirsthq" target="_blank">twitter</a> / <a href="http://www.instagram.com/shirsthq" target="_blank">ig</a>
 		</p>
 		<h3>Features</h3>
-          <p><a href="/collaborations" target="_blank">Textile Collaborations</a><br><a href="/collaborations/quilt" target="_blank">Denim NSFW</a><br><a href="http://shirst.com/film" target="_blank">Jenna Westra</a><br><a href="http://shirst.com/gayletter" target="_blank">Gayletter</a></p>
+          <p><a href="./collaborations" target="_blank">Textile Collaborations</a><br><a href="./collaborations/quilt" target="_blank">Denim NSFW</a><br><a href="./film" target="_blank">Jenna Westra</a><br><a href="./gayletter" target="_blank">Gayletter</a></p>
 
 		<h3>Mailing List</h3>
 		<p>Rare sightings</p>
@@ -165,7 +165,7 @@
 		<h3>Are the shirts unisex?</h3>
 		<p>Yes</p>
 		<h3>Sizing</h3>
-		<p><b>XS</b>: Very Snug<br><b>S</b>: Snug<br><b>M</b>: Neutral<br><b>L</b>: Large<br><b>XL</b>: Big Boned<br><a href="/sizing" target="_blank">Measurements</a></p>
+		<p><b>XS</b>: Very Snug<br><b>S</b>: Snug<br><b>M</b>: Neutral<br><b>L</b>: Large<br><b>XL</b>: Big Boned<br><a href="./sizing" target="_blank">Measurements</a></p>
 
 	</div>
 	<div style="clear: both;"></div>
@@ -186,9 +186,9 @@
 <script src="/js/waypoints.js"></script>
 <script src="/js/fancybox.js"></script>
 <script src="/js/wait.js"></script> -->
-<script src="/js/external.js"></script>
-<script src="/js/wpz.js"></script>
-<script src="/js/site.js"></script>
+<script src="./js/external.js"></script>
+<script src="./js/wpz.js"></script>
+<script src="./js/site.js"></script>
   </body>
 
 </html>
