--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
 
 
     <!-- <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script> -->
-<!-- <script src="/js/jq.js"></script>
-<script src="/js/waypoints.js"></script>
-<script src="/js/fancybox.js"></script>
-<script src="/js/wait.js"></script> -->
+<!-- <script src="./js/jq.js"></script>
+<script src="./js/waypoints.js"></script>
+<script src="./js/fancybox.js"></script>
+<script src="./js/wait.js"></script> -->
 <script src="./js/external.js"></script>
 <script src="./js/wpz.js"></script>
 <script src="./js/site.js"></script>
