--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 	<div class="long" id="im1">
 		<div>
-			<a href="javascript:;">
+			<a href="#outershell">
 				<img id="halfzip" src="./images/big/hen.jpg" srcset="./images/big/hen_m.jpg 800w, ./images/big/hen.jpg 1400w"/>
 			</a>
 			<div class="shadow-helper"></div>
@@ -66,7 +66,7 @@
 
 	<div class="long" id="im2">
 		<div>
-			<a href="javascript:;">
+			<a href="#sweater">
 				<img id="outershell" src="./images/big/button.jpg" srcset="./images/big/button_m.jpg 800w, ./images/big/button.jpg 1400w"/>
 			</a>
 			<div class="shadow-helper"></div>
@@ -75,7 +75,7 @@
 
 	<div class="long" id="im3">
 		<div>
-			<a href="javascript:;">
+			<a href="#tee">
 				<img id="sweater" src="./images/big/classic.jpg" srcset="./images/big/classic_m.jpg 800w, ./images/big/classic.jpg 1400w"/>
 			</a>
 			<div class="shadow-helper"></div>
@@ -84,7 +84,7 @@
 
 	<div class="long" id="im4">
 		<div>
-			<a href="javascript:;">
+			<a href="#shop">
 				<img id="tee" src="./images/big/short.jpg" srcset="./images/big/short_m.jpg 800w, ./images/big/short.jpg 1400w"/>
 			</a>
 			<div class="shadow-helper"></div>
